data/derived/sp14/progs/unify/prog4753.ml.out
Characters 63-64:
  wwhile(y, b);;
         ^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
